# measurement-data-saver

./: .gitignore  measurements.db  pyproject.toml
deploy/: docs.md  install.sh  measurement-data-saver.service
src/: config.py  database.py  main.py  parse.py  serial_reader.py  sniffer.py
tests/: run_e2e_test.py  test_database.py  test_parse.py  test_serial_reader.py
