[project]
name = "measurement-data-saver"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrzej Janaszek",email = "janaszek.andrzej.szkola@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "sdnotify (>=0.3.2,<0.4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]